--- a/realtime-search/src/style.css
+++ b/realtime-search/src/style.css
@@ -117,3 +117,19 @@ button:focus-visible {
     font-style: italic;
   }
 }
+
+.wrapper {
+  & input {
+    width: 400px; 
+    height: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding-left: 10px;
+    font-weight: 600;
+    border-radius: 5px;
+  }
+  & ::placeholder {
+    color :#5e618b;
+    font-style: italic;
+  }
+  
+}
