--- a/start-stop-reset/src/style.css
+++ b/start-stop-reset/src/style.css
@@ -92,8 +92,7 @@ button:focus-visible {
   }
   button,
   #count,
-  .wrapper
-  {
+  .wrapper {
     background-color: #f9f9f9;
     padding-top: 5px;
     padding-bottom: 5px;
